# frases

./: .gitignore  Dockerfile  pyproject.toml
config/: settings.py  urls.py
frases/: admin.py  models.py  serializers.py  urls.py  views.py
frases/migrations/: 0001_initial.py  0002_remove_work_review_work_title_alter_work_director_and_more.py
