[tool.poetry]
name = "frases-venv"
version = "0.1.0"
description = ""
authors = ["adair.abrigo <adair.abrigo@tia.com.ec>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
djangorestframework = "^3.16.1"
markdown = "^3.9"
django-filter = "^25.2"
python-dotenv = "^1.2.1"
psycopg2-binary = "^2.9.11"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"